# input-remapper

./: .coveragerc  .gitignore  .mypy.ini  .pylintrc  .reviewdog.yml  HELP.md  HISTORY.md  IMPLEMENTATION_STATUS.md  MANIFEST.in  PATHS.md  README.md  X11PATHS.md  anki  badges.sh  build.sh  com.github.key-mapper.yml  coverage.sh  docker-unittest  editor.glade  mqtt_config.json.example  org.flatpak.key-mapper.yml  pyproject.toml  ruff.toml  setup.py  shell.nix
.github/: FUNDING.yml
.run/: All Tests.run.xml  Only Integration Tests.run.xml  Only Unit Tests.run.xml  Only Unit tests.run.xml
DEBIAN/: control  copyright  postinst
building/: __main__.py  check_dependencies.py  data_files.py  module.py
data/: 69-input-remapper-forwarded.rules  99-input-remapper.rules  99-key-mapper.rules  input-remapper-autoload.desktop  input-remapper-gtk.desktop  input-remapper-mqtt-autoload.desktop  input-remapper-mqtt-gtk.desktop  input-remapper-mqtt.service  input-remapper-stop-all.desktop  input-remapper.desktop  input-remapper.glade  input-remapper.policy  input-remapper.service  inputremapper.Control.conf  inputremapper.mqtt.Control.conf  io.github.sezanzeb.input_remapper.metainfo.xml  key-mapper-autoload.desktop  key-mapper-empty  key-mapper-keycodes  key-mapper-service.desktop  key-mapper.desktop  key-mapper.glade  key-mapper.policy  key-mapper.rules  key-mapper.service  keymapper.Control.conf  org.key-mapper.policy  org.key-mapper.ubuntu.policy  screenshot.png~  setxkbmap-gtk.desktop  style.css  xkb_keycodes_template  xkb_symbols_template
deb/: MANIFEST.in
debian/: changelog  control  copyright  rules
flatpak/: io.github.sezanzeb.KeyMapper.desktop  io.github.sezanzeb.KeyMapper.metainfo.xml  io.github.sezanzeb.KeyMapper.yml  key-mapper.sh  python3-requires.json
inputremapper/: commit_hash.py  config.py  daemon.py  data.py  event_combination.py  exceptions.py  global_config.py  groups.py  input_configuration.py  input_event.py  installation_info.py  key.py  logger.py  mapping.py  migrations.py  mqtt_client.py  paths.py  preset.py  presets.py  system_mapping.py  user.py  utils.py
install/: __main__.py  check_dependencies.py  data_files.py  language.py  module.py  uninstall.py
keymapper/: X.py  archive.py  cli.py  config.py  daemon.py  data.py  devices.py  exceptions.py  getdevices.py  groups.py  injector.py  key.py  linux.py  logger.py  mapping.py  migrations.py  paths.py  permissions.py  presets.py  profiles.py  reader.py  (+7 more)
(+377 files in other folders)
